--- a/style.css
+++ b/style.css
@@ -309,3 +309,8 @@ h1 {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.owl-carousel img{
+  border-radius: 50%;
+box-shadow: 10px 10px 10px black;
+}
